header overflow fix and background color

--- a/styles/header.css
+++ b/styles/header.css
@@ -7,7 +7,7 @@
     top: 0;
     left: 0;
     right: 0;
-    background-color: white;
+    background-color: rgb(241, 241, 241);
     border-bottom-width: 1px;
     border-bottom-style: solid;
     border-bottom-color: rgb(236, 153, 153);
