--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -3,7 +3,7 @@
     left: 0;
     bottom: 0;
     top: 55px;
-    background-color:white;
+    background-color:rgb(241, 241, 241);
     width: 72px;
     z-index: 200;
     padding-top: 6px;
